<resources>
    <string name="app_name">SportRPG</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="create_new_account">Create new account</string>
    <string name="scoreLabel">Score:</string>
    <string name="walkLabel">Walk:</string>
    <string name="runLabel">Run:</string>
    <string name="bikeLabel">Bike:</string>
    <string name="levelLabel">Level:</string>
    <string name="emailHint">email</string>
    <string name="training">Training</string>
    <string name="character">Character</string>
    <string name="dungeon">Dungeon</string>
    <string name="time">Time</string>
    <string name="startTime">00:00:00</string>
    <string name="startDistance">0.0 km</string>
    <string name="distanceLabel">Distance</string>
    <string name="start">start</string>
    <string name="finish">finish</string>
    <string name="startButtonText">Start</string>
    <string name="stopButtonText">Stop</string>
    <string name="resumeButtonText">Resume</string>
    <string name="finishButtonText">Finish</string>
    <string name="pausedButtonText">Paused</string>
    <string name="strength">Strength:</string>
    <string name="agilityLabel">Agility:</string>
    <string name="spellPowerlabel">Spell Power:</string>
    <string name="vitality">Vitality:</string>
    <string name="ability_points">Ability points:</string>
    <string name="skill_points">Skill points</string>
    <string name="confirm">CONFIRM</string>
    <string name="abilities">Abilities</string>
    <string name="equipment">Equipment</string>
    <string name="skills">Skills</string>
    <string name="wariorr">Warrior</string>
    <string name="mage">Mage</string>
    <string name="rogue">Rogue</string>
    <string name="choose_class">Choose your character class</string>
    <string name="home">Home</string>
    <string name="hint_warrior">Based on strength and double hand weapon</string>
    <string name="hint_mage">Kill enemys with arcane powers</string>
    <string name="hint_rogue">Child of the shadow. Poison killer</string>
    <string name="next_level">Next level</string>


    <string name="current_lelvel_dialog_string">Current level: %d</string>
    <string name="close">Close</string>
    <string name="dmg_alas">Damage</string>
    <string name="magic_dmg_alias">Magic damage</string>
    <string name="defense_alias">Defense</string>
    <string name="magic_defense_alias">Magic Resist</string>
    <string name="hit_chance_alias">Hit chance</string>
    <string name="dodge_chance_alias">Dodge chance</string>
    <string name="crit_chance_alias">Crit chance</string>
    <string name="crit_dmg_alias">Crit damage</string>
    <string name="stun_alias">Stun</string>
    <string name="blind_alias">Blind</string>
    <string name="morale_alias">Morale</string>
    <string name="stack_alias">Stack</string>
    <string name="burst_stack_alias">Burst stack</string>
    <string name="true_dmg_alias">True damage</string>
    <string name="health_alias">Health</string>
    <string name="magic_thorns_alias">Magic thorns</string>
    <string name="thorns_alias">Thorns</string>
    <string name="invisible_alias">Invisible</string>


    <string-array name="character_type">
        <item>@string/wariorr</item>
        <item>@string/mage</item>
        <item>@string/rogue</item>
    </string-array>
</resources>
