<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal">

        <ImageView
            android:id="@+id/trainingImage"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="50dp"/>

        <TextView
            android:id="@+id/timeLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            style="@style/TrainigLabeltyle"
            android:text="@string/time" />

        <TextView
            android:id="@+id/timeValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/TrainigLabeltyle"
            android:text="@string/startTime" />

        <TextView
            android:id="@+id/distanceLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            style="@style/TrainigLabeltyle"
            android:text="@string/distanceLabel" />

        <TextView
            android:id="@+id/distanceValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/TrainigLabeltyle"
            android:text="@string/startDistance" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:layout_marginTop="50dp">

            <Button
                android:id="@+id/startResumeButton"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:text="@string/start"
                android:layout_marginEnd="50dp"/>

            <Button
                android:id="@+id/finishStopButton"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:text="@string/finish"
                android:padding="10dp"/>

        </LinearLayout>


    </LinearLayout>



</android.support.constraint.ConstraintLayout>