<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".View.NewAccountActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">

        <EditText
            android:id="@+id/emailText"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:inputType="textEmailAddress"
            android:hint="@string/emailHint"
            android:layout_marginBottom="50dp"/>

        <EditText
            android:id="@+id/usernameText"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:inputType="text"
            android:hint="@string/username"
            android:layout_marginBottom="50dp"/>

        <EditText
            android:id="@+id/passwordText"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:inputType="textPassword"
            android:hint="@string/password"
            android:layout_marginBottom="50dp"/>


        <Button
            android:id="@+id/createNew"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create_new_account"
            android:layout_marginBottom="100dp"/>

    </LinearLayout>


</android.support.constraint.ConstraintLayout>
