<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="top">

            <ImageView
                android:id="@+id/avatarView"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:padding="5dp"/>

            <TextView
                android:id="@+id/nameView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/TitleStyle"
                android:text="Krzys"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="5dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                style="@style/LabelStyle"
                android:text="@string/levelLabel"/>

            <TextView
                android:id="@+id/levelValueView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/ValueStyle"
                android:text="10"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="5dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                style="@style/LabelStyle"
                android:text="@string/strength"/>

            <TextView
                android:id="@+id/strengthValueView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/ValueStyle"
                android:text="12"/>

            <ImageButton
                android:id="@+id/buttonAddStrength"
                android:layout_width="@dimen/character_plus_icon"
                android:layout_height="@dimen/character_plus_icon"
                android:background="@drawable/plus"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="@dimen/wide_margin"/>

            <ImageButton
                android:id="@+id/buttonSubstractStrength"
                android:layout_width="@dimen/character_plus_icon"
                android:layout_height="@dimen/character_plus_icon"
                android:background="@drawable/minus"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="@dimen/wide_margin"/>
        </LinearLayout>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="5dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                style="@style/LabelStyle"
                android:text="@string/agilityLabel"/>

            <TextView
                android:id="@+id/agilityValueView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/ValueStyle"
                android:text="21"/>

            <ImageButton
                android:id="@+id/buttonAddAgility"
                android:layout_width="@dimen/character_plus_icon"
                android:layout_height="@dimen/character_plus_icon"
                android:background="@drawable/plus"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="@dimen/wide_margin"/>

            <ImageButton
                android:id="@+id/buttonSubstractAgility"
                android:layout_width="@dimen/character_plus_icon"
                android:layout_height="@dimen/character_plus_icon"
                android:background="@drawable/minus"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="@dimen/wide_margin"/>
        </LinearLayout>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="5dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                style="@style/LabelStyle"
                android:text="@string/spellPowerlabel"/>

            <TextView
                android:id="@+id/spellPowerValueView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/ValueStyle"
                android:text="11"/>

            <ImageButton
                android:id="@+id/buttonAddSpellPower"
                android:layout_width="@dimen/character_plus_icon"
                android:layout_height="@dimen/character_plus_icon"
                android:background="@drawable/plus"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="@dimen/wide_margin"/>

            <ImageButton
                android:id="@+id/buttonSubstractSpellPower"
                android:layout_width="@dimen/character_plus_icon"
                android:layout_height="@dimen/character_plus_icon"
                android:background="@drawable/minus"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="@dimen/wide_margin"/>
        </LinearLayout>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="5dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                style="@style/LabelStyle"
                android:text="@string/vitality"/>

            <TextView
                android:id="@+id/vitalityValueView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/ValueStyle"
                android:text="5"/>

            <ImageButton
                android:id="@+id/buttonAddVitality"
                android:layout_width="@dimen/character_plus_icon"
                android:layout_height="@dimen/character_plus_icon"
                android:background="@drawable/plus"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="@dimen/wide_margin"/>

            <ImageButton
                android:id="@+id/buttonSubstractVitality"
                android:layout_width="@dimen/character_plus_icon"
                android:layout_height="@dimen/character_plus_icon"
                android:background="@drawable/minus"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="@dimen/wide_margin"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="5dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                style="@style/LabelStyle"
                android:text="@string/ability_points"/>

            <TextView
                android:id="@+id/abilityValueView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/ValueStyle"
                android:text="5"/>


        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="5dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                style="@style/LabelStyle"
                android:text="@string/skill_points"/>

            <TextView
                android:id="@+id/skillValueView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/ValueStyle"
                android:text="5"/>
        </LinearLayout>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/confirm"
            android:layout_gravity="center_vertical" />

    </LinearLayout>

</android.support.constraint.ConstraintLayout>